<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_default" />
</LinearLayout>